# CHIP-8-Emulator

./: CMakeLists.txt  README.md
include/: chip8.h
src/: chip8.cpp  chip8.h  main.cpp  opcodes.cpp
